Html change name

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header class="header">
-      <h1 class="header__title">Mohammad Kaadan</h1>
+      <h1 class="header__title">MHMD KAADAN</h1>
       <nav class="header__nav-list">
         <ul class="nav-list">
           <li><a class="nav-list__link nav-list__link--active" href="#">Home</a></li>
@@ -92,7 +92,7 @@
       </section>
     </main>
     <footer class="footer">
-      <p>&copy; Mohammad Kaadan's Portfolio</p>
+      <p>&copy; MHMD KAADAN's Portfolio</p>
     </footer>
   </body>
 </html>
