Working on the booking page

--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
         </form>
         
       </section>
+      <section>
+        <h1>Booking a Call!</h1>
+
+      </section>
     </main>
     <footer class="footer">
       <p>&copy; Mohammad Kaadan's Portfolio</p>
