Added book me button

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
       </section>
       <section>
         <h1>Booking a Call!</h1>
+        <button>Call me now</button>
 
       </section>
     </main>
